--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async src="https://stats.nystad.io/tracker.js" data-ackee-server="https://stats.nystad.io" data-ackee-domain-id="6a18294d-3f0f-441a-a36b-dba5a0dd6ed5"></script>
   </body>
 </html>
