--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
@@ -12,7 +12,18 @@
     <title>Register over åpne datasett i Norge</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <h1>Register over åpne datasett i Norge</h1>
+      </header>
+      <p style="max-width: 1200px">
+        Dette er en forenklet og kompakt oversikt over datasett og APIer
+        publisert av offentlige organer og andre norske organisasjoner.
+        Informasjonen er hentet fra data.norge.no, og dette er en alternativ
+        måte å søke etter publiserte data. Bruk søket i hjørnet for å søke på
+        forvalter, tittel, beskrivelse og nøkkelord, eller filtrer nedenfor.
+      </p>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
