Add matomo code

--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
       </p>
     </div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <img
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://ma.nystad.io/js/?idsite=6&amp;rec=1"
+      style="border: 0"
+      alt=""
+    />
   </body>
 </html>
