--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#f7f7f7" />
+    <meta name="theme-color" content="#105AC1" />
     <meta
       name="description"
       content="Oversiktsside over åpne datasett i Norge, som publisert av data.norge.no"
